# codectl

./: .gitignore  pyproject.toml
codectl/: compiler.py  jinja.py  manage.py  schema.py  settings.py  utils.py
templates/a/: a.txt.schema  a.txt.tpl  handlers.py
templates/a/a1/: a1.txt.tpl
templates/b/: handlers.py  schema.schema  types.schema
templates/b/apis/: {{_.name}}.ts.mtpl  {{_.name}}.ts.schema
templates/b/types/: {{_.name}}.ts.mtpl  {{_.name}}.ts.schema
tests/: test_codectl.py  test_schema.py
