[tool.poetry]
name = "codectl"
version = "0.1.5"
description = ""
authors = ["whc <249768447@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
click = "^8.1.7"
case-convert = "^1.1.0"
python-dotenv = "^1.0.1"
jsonschema = "^4.21.1"
deepmerge = "^1.1.1"
referencing = "^0.34.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codectl = "codectl.manage:cli"